fixed the last issues with some images not showing properly
Plus I started my final Project layout and mechanics. Not much done but
working on methods to get it to work properly

--- a/Final Project Test/css/main.css
+++ b/Final Project Test/css/main.css
@@ -1,24 +1,43 @@
-
- {
-    height: 20px;
-    transition: width 1s ease;
+body{
+	background-image: url(../img/bg.jpg);
 }
-
-input:checked {
-    width: 30px;
+.wrapper{
+	max-width: 960px;
+	margin: 0 auto;
+	background-color:;
 }
-.ChoiceOptions1{
-	width:100px;
-	height: 100px;
-	border: 1px solid red;
-	display: inline-block;
-	margin:0px;
-	transition: width 1s ease, height 1s ease ;
-	}
+img{
+	max-width: 600px;
+	margin-right: 180px;
+	margin-left: 180px;
+	height: 600px;
+	background-image: url(...img/BloodSplatter.png);
 
-.ChoiceOptions1:hover{
-	background-color: purple;
-	cursor: pointer;
-	width:200px;
-	height:200px;
+}
+ 
+.blood {
+	margin-bottom: 30px;
+	font-size: 72px;
+	text-align: center;
+    color:silver;
+    text-shadow:
+	4px 4px 1px #300000,
+	4px 6px 1px #400000,
+	4px 8px 1px #500000,
+	4px 10px 1px #600000,
+	4px 12px 1px #700000,
+	4px 14px 1px #800000,
+	4px 16px 1px #900000,
+	4px 18px 1px #A00000,
+	4px 20px 1px #B00000,
+	4px 22px 1px #C00000,
+	4px 24px 1px #D00000,
+	4px 26px 1px #E00000,
+	4px 28px 1px #F00000,
+	4px 30px 1px #FA0000,
+	4px 32px 1px #FB0000,
+	4px 34px 1px #FC0000,
+	4px 36px 1px #FD0000,
+	4px 38px 1px #FE0000,
+	4px 40px 2px #FF0000;
 }
