--- a/GA_Slideshow/css/main.css
+++ b/GA_Slideshow/css/main.css
@@ -19,13 +19,3 @@ body{
 	cursor: crosshair;
 
 }
-.btn{
-	width:60px;
-	height:20px;
-	border: 2px solid black;
-	background-color:red;
-	display: inline-block;
-	text-align: center;
-
-	
-}
